# robo-muehle

./: .gitignore  LICENSE  README.md  Role assignments.txt  create_gif.sh  pyproject.toml
assets/indices/: board_indices.csv
configs/: niryo_config.toml
configs/calibrations/: calibration_036.toml
docs/: ai.mmd
models/: README.md  policy_final-2.pth  policy_final-3.pth  policy_final-4.pth  policy_final.pth
paper/: ai.typ  detect.typ  intro.typ  main.typ  movement.bib  movement.typ  refs.bib
src/: ai_placeholder.py  muehle_game.py  muhle_renderer.py  renderer.py
src/ai/: helper.py  play.py  policy.py  train.py
src/imagedetection/: board_geometry.py  detector.py  homography.py  index_mapping.py  morris_ascii.py
src/imagedetection/data/indices/: board_indices.csv
src/imagedetection/vision/: board_bbox.py  debug_vis.py  stone_center.py
src/piecewalker/: board_model.py  config.py  core.py  mock_core.py  ned2.py  ned2_provider.py  paths.py  reduced_stresstest.py  stresstest.py
src/piecewalker/calibration/: __main__.py  cli.py  helper.py
src/runtime/: __main__.py  args.py  camera_provider.py  cli.py  config.py  game_loop.py  paths.py
tests/: conftest.py  test_delta.py  test_game.py
tools/: test_game.py  vision_image.py  vision_live.py
