[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-muehle"
version = "0.1.0"
description = "Robo Arm spielt Mühle"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Frederik Schwarz", email = "frederik@example.com" },
    { name = "Eugen Ganscha", email = "eugen.ganscha@hof-university.de" },
    { name = "Marie Müller", email = "marie.mueller@hof-university.de" },
    { name = "Kitti Kern", email = "kitti.kern@hof-university.de" }
]
dependencies = [
    "numpy",
    "torch",
    "pyniryo",
    "ultralytics",
    "opencv-python"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"], include = ["*"] }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"  # optional: verbose, concise output
testpaths = ["tests"]
